# xkb-keyboard-indicator

./: .gitignore  CMakeLists.txt  Makefile  README.md  about-dialog.ui  about.h  global.h  indicator.h  main.c  menu.ui  resources.c  settings-dialog.ui  settings.c  ui.gresource.xml  xki.gresource.xml  xki.gschema.xml
cmake/: FindLibXKlavier.cmake
data/: about-dialog.ui  menu.ui  xki.gresource.xml  xki.gschema.xml
src/: CMakeLists.txt  about.c  about.h  config.h.in  global.h  indicator.c  indicator.h  main.c  settings.c  settings.h  version.h
